--- a/index.html
+++ b/index.html
@@ -30,15 +30,15 @@
     <!-- Calculator -->
     <div class="calculator">
       <!-- Display -->
-      <div class="calculator-display">
-        <h1>123456789</h1>
+      <div class="calculator-display name= display">
+        <h1>0</h1>
       </div>
       <!-- Buttons -->
       <div class="calculator-button">
         <button class="operator" value="+">+</button>
         <button class="operator" value="-">-</button>
-        <button class="operator" value="÷">÷</button>
-        <button class="operator" value="×">×</button>
+        <button class="operator" value="/">÷</button>
+        <button class="operator" value="*">×</button>
         <button value="7">7</button>
         <button value="8">8</button>
         <button value="9">9</button>
